Changed process for showing error messages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -40,10 +40,12 @@
           </form>
         </section>
         <section class="card-footer">
+          <!--Empty p element to generate error message in-->
+          <p id="errorMsg"></p>
           <button id="generate" class="btn">Generate Password</button>
         </section>
       </main>
     </div>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
