changed readme url destination

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           ></textarea>
         </section>
         <!--Added a form to select criteria from rather than alerts, looks much better.-->
-        <section class="card-form">
+        <section class="card-form">changed
           <form>
             <label for="passwordLength">Password Length:</label>
             <input type="number" id="pLength" name="pLength"><br>
